--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    mailer_user: 'mailer_user'
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +27,17 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.security.roles:
+        class: App\Services\RolesHelper
+        arguments: ['@security.token_storage', '@security.role_hierarchy']
+        public: true
+
+    app.user_manager:
+        class: App\Entity\Security\UserManager
+        arguments:
+            - '@fos_user.util.password_updater'
+            - '@fos_user.util.canonical_fields_updater'
+            - '@fos_user.object_manager'
+            - '%fos_user.model.user.class%'
+        public: false
