--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /.env
 /.env.test
 /.idea
+/node_modules
+/public/dist
 ###< Custom ###
 
 ###> symfony/framework-bundle ###
@@ -21,10 +23,3 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
-
-###> symfony/webpack-encore-bundle ###
-/node_modules/
-/public/build/
-npm-debug.log
-yarn-error.log
-###< symfony/webpack-encore-bundle ###
