--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-    "devDependencies": {
-        "@symfony/webpack-encore": "^0.22.0",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    }
+  "name": "iptv",
+  "version": "1.0.0",
+  "description": "",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "gulp-cli": "^2.0.1",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "del": "^4.0.0",
+    "gulp": "^4.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "merge-stream": "^1.0.1",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.11.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^4.29.6",
+    "webpack-stream": "^5.2.1"
+  },
+  "scripts": {
+    "gulp": "./node_modules/gulp/bin/gulp.js"
+  }
 }
