Add EasyAdmin bundle and super admin user fixture

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,7 +16,7 @@ framework:
     php_errors:
         log: true
 
-    translator: ~
+    translator: { fallbacks: [ "en" ] }
 
     templating:
         engines:
