Add Channel, Country and Genre entities with basic fields

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -30,3 +30,12 @@ easy_admin:
             type_options:
               entry_type: App\Form\Type\RoleChoiceType
               required: true
+
+    Channel:
+      class: App\Entity\Channel
+
+    Country:
+      class: App\Entity\Country
+
+    Genre:
+      class: App\Entity\Genre
