--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -1,9 +1,9 @@
 fos_user:
   db_driver: orm
-  firewall_name: main
   user_class: App\Entity\Security\User
-  from_email:
-    address: "%mailer_user%"
-    sender_name: "%mailer_user%"
+  firewall_name: main
   service:
-    user_manager: app.user_manager
+      user_manager: app.user_manager
+  from_email:
+    address: "%env(MAILER_SENDER_ADDRESS)%"
+    sender_name: "%env(MAILER_SENDER_NAME)%"
